--- a/src/css/templates/contact-thanks.css
+++ b/src/css/templates/contact-thanks.css
@@ -1,5 +1,5 @@
 .footer {
-  margin: 2rem 0rem;
+  margin: 1rem 0rem;
   background: #f8f4f5;
   border-radius: 8px;
   padding: 1.8rem 1rem;
@@ -17,14 +17,15 @@
 }
 .footer .list__item {
   font-weight: bold;
-  font-size: 10px;
+  font-size: 12px;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 .footer .list__item:nth-of-type(2) {
-  margin: 0rem 0.5rem;
+  margin: 0rem 0.2rem;
 }
 .footer .list__item:nth-of-type(2)::before {
   content: " |  ";
-  margin: 0rem 0.5rem;
+  margin: 0rem 0.2rem;
   color: rgb(19, 231, 182);
 }
 .footer .list__item:nth-of-type(2)::after {
@@ -42,9 +43,10 @@
 }
 .footer .subscription-text,
 .footer .copy-right {
-  font-size: 10px;
+  font-size: 12px;
   color: #9b9b9b;
   line-height: 1rem;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 
 .riskline-button {
@@ -56,6 +58,8 @@
   padding: 0.8rem 1.9rem;
   border-radius: 5px;
   text-decoration: none;
+  font-family: Inter-Bold, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 /* Buttons styles start */
@@ -88,13 +92,10 @@ button:active {
 /* Button styles end */
 .main {
   max-width: 450px;
-  margin: auto;
   padding: 0rem 1rem;
+  margin: 1rem auto;
 }
 
-.contact-thanks-wrap {
-  margin: 2rem 0rem;
-}
 .contact-thanks-wrap .thanks-card {
   display: flex;
   flex-direction: column;
@@ -117,6 +118,7 @@ button:active {
   font-size: 25px;
   margin: 2rem 0rem;
   font-weight: 300;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 .contact-thanks-wrap .help-wrap {
   display: flex;
@@ -127,8 +129,12 @@ button:active {
   background: #edf1f4;
   border-radius: 8px;
 }
+.contact-thanks-wrap .help-wrap .title {
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
+}
 .contact-thanks-wrap .help-wrap .content {
   line-height: 2rem;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 .contact-thanks-wrap .help-wrap .btn {
   margin-top: 1rem;
