--- a/src/css/templates/daily-brief.css
+++ b/src/css/templates/daily-brief.css
@@ -1,5 +1,5 @@
 .footer {
-  margin: 2rem 0rem;
+  margin: 1rem 0rem;
   background: #f8f4f5;
   border-radius: 8px;
   padding: 1.8rem 1rem;
@@ -17,14 +17,15 @@
 }
 .footer .list__item {
   font-weight: bold;
-  font-size: 10px;
+  font-size: 12px;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 .footer .list__item:nth-of-type(2) {
-  margin: 0rem 0.5rem;
+  margin: 0rem 0.2rem;
 }
 .footer .list__item:nth-of-type(2)::before {
   content: " |  ";
-  margin: 0rem 0.5rem;
+  margin: 0rem 0.2rem;
   color: rgb(19, 231, 182);
 }
 .footer .list__item:nth-of-type(2)::after {
@@ -42,9 +43,10 @@
 }
 .footer .subscription-text,
 .footer .copy-right {
-  font-size: 10px;
+  font-size: 12px;
   color: #9b9b9b;
   line-height: 1rem;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 
 .riskline-button {
@@ -56,6 +58,8 @@
   padding: 0.8rem 1.9rem;
   border-radius: 5px;
   text-decoration: none;
+  font-family: Inter-Bold, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 /* Buttons styles start */
@@ -103,7 +107,6 @@ button:active {
 @media screen and (max-width: 550px) {
   .getStartedContainer {
     display: block;
-    margin: auto;
     text-align: center;
   }
   .getStartedContainer .title {
@@ -116,46 +119,57 @@ button:active {
   max-width: 700px;
   margin: auto;
   padding: 0rem 1rem;
+  margin: 1rem auto;
 }
 
 .dailyBrief {
-  background: #f1f1f1;
+  background: #edf1f4;
   padding-bottom: 1rem;
+  border-radius: 10px;
 }
 .dailyBrief__header {
-  background-image: url("../../assets/images/daily-brief-bg.jpg");
+  background-image: url("../../assets/images/daily-brief-bg.png");
   background-size: cover;
-  height: 400px;
+  height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  overflow: hidden;
 }
 .dailyBrief__header__title {
   font-size: 40px;
   color: #fff;
   line-height: 4rem;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 @media screen and (max-width: 550px) {
   .dailyBrief__header__title {
-    font-size: 25px;
+    font-size: 30px;
   }
 }
 .dailyBrief__header__date {
-  font-size: 20px;
+  font-size: 18px;
   color: #fff;
+  font-family: Inter-Regular, Helvetica, sans-serif;
 }
 .dailyBrief__category {
   margin: 2rem 1rem;
+}
+.dailyBrief__category__title {
+  color: #25b0c1;
+  font-family: GT-FLEXA, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
 }
 .dailyBrief__category__item {
   background: #fff;
   min-height: 400px;
   border-radius: 10px;
   padding: 1rem 1.5rem;
-  margin: 2rem 0rem;
+  margin: 1rem 0rem;
 }
 .dailyBrief__category__item__header {
   display: flex;
@@ -167,21 +181,23 @@ button:active {
   font-size: 18px;
 }
 .dailyBrief__category__item__header .flag {
-  margin-left: auto;
-  width: 50px;
-  height: 50px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
+  margin-right: 1rem;
 }
 @media screen and (max-width: 550px) {
   .dailyBrief__category__item__header .flag {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
   }
 }
 .dailyBrief__category__item__body .title {
-  font-size: 18px;
+  font-size: 20px;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
+  line-height: 1.2rem;
 }
 @media screen and (max-width: 550px) {
   .dailyBrief__category__item__body .title {
@@ -189,13 +205,66 @@ button:active {
   }
 }
 .dailyBrief__category__item__body .text {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.5rem;
+  color: #999999;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 @media screen and (max-width: 550px) {
   .dailyBrief__category__item__body .text {
     font-size: 16px;
   }
+}
+.dailyBrief__category__item__body .wrap {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 0.5rem 0rem;
+}
+@media screen and (min-width: 600px) {
+  .dailyBrief__category__item__body .wrap {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.dailyBrief__category__item__body .wrap .riskLevel {
+  min-height: 120px;
+  background: #f1f1f1;
+  border-radius: 10px;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.dailyBrief__category__item__body .wrap .riskLevel__header__subTitle {
+  font-size: 20px;
+  font-weight: 100;
+  margin-top: 1rem;
+}
+.dailyBrief__category__item__body .wrap .riskLevel__levels {
+  display: flex;
+  grid-gap: 0.2rem;
+  gap: 0.2rem;
+}
+.dailyBrief__category__item__body .wrap .riskLevel__levels__item {
+  position: relative;
+  width: 0.7rem;
+  height: 2rem;
+  border-radius: 50px;
+  background: #ccc;
+}
+.dailyBrief__category__item__body .wrap .riskLevel__levels [alert-type="1"] {
+  background: #33825b;
+}
+.dailyBrief__category__item__body .wrap .riskLevel__levels [alert-type="2"] {
+  background: #44ae72;
+}
+.dailyBrief__category__item__body .wrap .riskLevel__levels [alert-type="3"] {
+  background: #fac84a;
+}
+.dailyBrief__category__item__body .wrap .riskLevel__levels [alert-type="4"] {
+  background: #de8652;
+}
+.dailyBrief__category__item__body .wrap .riskLevel__levels [alert-type="5"] {
+  background: #8b0000;
 }
 .dailyBrief__category__item__body .riskLevel {
   margin: 2rem 0rem;
