--- a/src/css/templates/news-alert.css
+++ b/src/css/templates/news-alert.css
@@ -1,5 +1,5 @@
 .footer {
-  margin: 2rem 0rem;
+  margin: 1rem 0rem;
   background: #f8f4f5;
   border-radius: 8px;
   padding: 1.8rem 1rem;
@@ -17,14 +17,15 @@
 }
 .footer .list__item {
   font-weight: bold;
-  font-size: 10px;
+  font-size: 12px;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 .footer .list__item:nth-of-type(2) {
-  margin: 0rem 0.5rem;
+  margin: 0rem 0.2rem;
 }
 .footer .list__item:nth-of-type(2)::before {
   content: " |  ";
-  margin: 0rem 0.5rem;
+  margin: 0rem 0.2rem;
   color: rgb(19, 231, 182);
 }
 .footer .list__item:nth-of-type(2)::after {
@@ -42,9 +43,10 @@
 }
 .footer .subscription-text,
 .footer .copy-right {
-  font-size: 10px;
+  font-size: 12px;
   color: #9b9b9b;
   line-height: 1rem;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 
 .riskline-button {
@@ -56,6 +58,8 @@
   padding: 0.8rem 1.9rem;
   border-radius: 5px;
   text-decoration: none;
+  font-family: Inter-Bold, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 /* Buttons styles start */
@@ -87,82 +91,80 @@ button:active {
 
 /* Button styles end */
 .main {
-  max-width: 700px;
+  max-width: 500px;
   margin: auto;
   padding: 0rem 1rem;
 }
 .main .news-alerts .country-card {
   display: flex;
-  background: #f1f1f1;
   border-radius: 8px;
-}
-.main .news-alerts .country-card .body {
-  width: 80%;
-  position: relative;
-  border-radius: 10px;
-  padding: 4rem 1.5rem;
-}
-.main .news-alerts .country-card .body .logo-icon {
-  position: absolute;
-  left: 15px;
-  top: 15px;
-  height: 25px;
+  margin: 1rem auto;
 }
 .main .news-alerts .country-card .body .header {
+  background: #f1f1f1;
+  position: relative;
+  border-radius: 10px;
+  padding: 1rem 1.5rem;
+}
+.main .news-alerts .country-card .body .header__logos {
   display: flex;
   align-items: center;
+  margin-bottom: 3rem;
 }
-.main .news-alerts .country-card .body .header .title {
+.main .news-alerts .country-card .body .header__logos__riskline {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media screen and (max-width: 550px) {
+  .main .news-alerts .country-card .body .header__logos__riskline {
+    width: 25px;
+    height: 25px;
+  }
+}
+.main .news-alerts .country-card .body .header__logos__country {
+  margin-left: auto;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media screen and (max-width: 550px) {
+  .main .news-alerts .country-card .body .header__logos__country {
+    width: 25px;
+    height: 25px;
+  }
+}
+.main .news-alerts .country-card .body .header__sub__countryName {
   font-size: 16px;
+  font-weight: 700;
   font-weight: normal;
-  line-height: 3rem;
+  text-transform: uppercase;
 }
-.main .news-alerts .country-card .body .header .flag-sm {
-  display: none;
-}
-@media screen and (max-width: 350px) {
-  .main .news-alerts .country-card .body .header .flag-sm {
-    margin-left: auto;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    -o-object-fit: cover;
-       object-fit: cover;
-    display: block;
-  }
-}
-@media screen and (max-width: 350px) and (max-width: 550px) {
-  .main .news-alerts .country-card .body .header .flag-sm {
-    width: 30px;
-    height: 30px;
-  }
-}
-.main .news-alerts .country-card .body .content {
-  line-height: 1.5rem;
-}
-.main .news-alerts .country-card .body .advice-title {
-  line-height: 1.5rem;
-  margin-top: 1.5rem;
-}
-.main .news-alerts .country-card .body .sub-title {
-  line-height: 1.8rem;
+.main .news-alerts .country-card .body .header__sub__alertTitle {
+  line-height: 1em;
   font-weight: bold;
   font-size: 25px;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+.main .news-alerts .alert-content {
+  background: #edf1f4;
+  position: relative;
+  border-radius: 10px;
+  padding: 1rem 1.5rem;
+}
+.main .news-alerts .alert-content .content {
+  line-height: 1.5rem;
+  font-family: Helvetica-semi-bold, Helvetica, sans-serif;
+}
+.main .news-alerts .alert-content .advice-title {
+  line-height: 1.5rem;
   margin-top: 1.5rem;
-}
-.main .news-alerts .country-card .flag {
-  display: none;
-}
-@media screen and (min-width: 351px) {
-  .main .news-alerts .country-card .flag {
-    display: flex;
-    align-items: center;
-    width: 20%;
-  }
-  .main .news-alerts .country-card .flag img {
-    max-width: 100%;
-  }
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 .main .news-alerts .wrap {
   display: grid;
@@ -176,7 +178,7 @@ button:active {
   }
 }
 .main .news-alerts .wrap .riskLevel {
-  min-height: 150px;
+  min-height: 120px;
   background: #f1f1f1;
   border-radius: 10px;
   padding: 1.5rem;
@@ -185,14 +187,14 @@ button:active {
   justify-content: space-between;
 }
 .main .news-alerts .wrap .riskLevel__header__subTitle {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 100;
   margin-top: 1rem;
 }
 .main .news-alerts .wrap .riskLevel__levels {
   display: flex;
-  grid-gap: 0.4rem;
-  gap: 0.4rem;
+  grid-gap: 0.3rem;
+  gap: 0.3rem;
 }
 .main .news-alerts .wrap .riskLevel__levels__item {
   position: relative;
