--- a/src/css/templates/risk-level-update.css
+++ b/src/css/templates/risk-level-update.css
@@ -1,5 +1,5 @@
 .footer {
-  margin: 2rem 0rem;
+  margin: 1rem 0rem;
   background: #f8f4f5;
   border-radius: 8px;
   padding: 1.8rem 1rem;
@@ -17,14 +17,15 @@
 }
 .footer .list__item {
   font-weight: bold;
-  font-size: 10px;
+  font-size: 12px;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 .footer .list__item:nth-of-type(2) {
-  margin: 0rem 0.5rem;
+  margin: 0rem 0.2rem;
 }
 .footer .list__item:nth-of-type(2)::before {
   content: " |  ";
-  margin: 0rem 0.5rem;
+  margin: 0rem 0.2rem;
   color: rgb(19, 231, 182);
 }
 .footer .list__item:nth-of-type(2)::after {
@@ -42,9 +43,10 @@
 }
 .footer .subscription-text,
 .footer .copy-right {
-  font-size: 10px;
+  font-size: 12px;
   color: #9b9b9b;
   line-height: 1rem;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 
 .riskline-button {
@@ -56,6 +58,8 @@
   padding: 0.8rem 1.9rem;
   border-radius: 5px;
   text-decoration: none;
+  font-family: Inter-Bold, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 /* Buttons styles start */
@@ -88,13 +92,10 @@ button:active {
 /* Button styles end */
 .main {
   max-width: 450px;
-  margin: auto;
+  margin: 1rem auto;
   padding: 0rem 1rem;
 }
 
-.riskLevelUpdate {
-  margin: 2rem 0rem;
-}
 .riskLevelUpdate .countryUpdate {
   display: flex;
   flex-direction: column;
@@ -171,6 +172,7 @@ button:active {
   padding: 0.5rem 1rem 0.7rem 1rem;
   position: relative;
   box-shadow: 0 10px 10px -10px #000000;
+  text-transform: uppercase;
 }
 .riskLevelUpdate .countryUpdate .riskLevelCountry__new .new-tag {
   position: absolute;
@@ -191,6 +193,7 @@ button:active {
   display: flex;
   grid-gap: 0.4rem;
   gap: 0.4rem;
+  margin: 0.5rem 0rem;
 }
 .riskLevelUpdate .countryUpdate .riskLevelCountry__new__levels__item {
   position: relative;
@@ -234,6 +237,7 @@ button:active {
 .riskLevelUpdate .message-wrap .content {
   line-height: 1.2rem;
   text-align: center;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 .riskLevelUpdate .message-wrap .btn {
   margin-top: 1rem;
