--- a/src/css/templates/welcome.css
+++ b/src/css/templates/welcome.css
@@ -1,5 +1,5 @@
 .footer {
-  margin: 2rem 0rem;
+  margin: 1rem 0rem;
   background: #f8f4f5;
   border-radius: 8px;
   padding: 1.8rem 1rem;
@@ -18,14 +18,15 @@
 }
 .footer .list__item {
   font-weight: bold;
-  font-size: 10px;
+  font-size: 12px;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 .footer .list__item:nth-of-type(2) {
-  margin: 0rem 0.5rem;
+  margin: 0rem 0.2rem;
 }
 .footer .list__item:nth-of-type(2)::before {
   content: " |  ";
-  margin: 0rem 0.5rem;
+  margin: 0rem 0.2rem;
   color: rgb(19, 231, 182);
 }
 .footer .list__item:nth-of-type(2)::after {
@@ -43,9 +44,10 @@
 }
 .footer .subscription-text,
 .footer .copy-right {
-  font-size: 10px;
+  font-size: 12px;
   color: #9b9b9b;
   line-height: 1rem;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 
 .riskline-button {
@@ -57,6 +59,8 @@
   padding: 0.8rem 1.9rem;
   border-radius: 5px;
   text-decoration: none;
+  font-family: Inter-Bold, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 /* Buttons styles start */
@@ -94,7 +98,7 @@ button:active {
 }
 
 .welcome-wrap {
-  margin: 2rem 1rem;
+  margin: 1rem 1rem;
 }
 .welcome-wrap .realTime-alert-messaging {
   display: flex;
@@ -105,7 +109,7 @@ button:active {
   position: relative;
   padding: 3rem 1rem;
   border-radius: 8px;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 .welcome-wrap .realTime-alert-messaging .logo-icon {
   position: absolute;
@@ -116,6 +120,7 @@ button:active {
 }
 .welcome-wrap .realTime-alert-messaging .title {
   margin-bottom: 2rem;
+  font-size: 20px;
 }
 .welcome-wrap .realTime-alert-messaging .alert-image {
   height: 256px;
@@ -133,8 +138,8 @@ button:active {
   margin-bottom: 1.5rem;
 }
 .welcome-wrap .email-content .content {
-  font-weight: 450;
   margin-bottom: 1rem;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 .welcome-wrap .email-content .riskline-button {
   margin: 2rem auto;
