--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -9,6 +9,8 @@
     padding: 0.8rem 1.9rem;
     border-radius: 5px;
     text-decoration: none;
+    font-family: Inter-Bold, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 /* Buttons styles start */
