--- a/src/scss/templates/daily-brief.scss
+++ b/src/scss/templates/daily-brief.scss
@@ -11,37 +11,48 @@
     max-width: 700px;
     margin: auto;
     padding: 0rem 1rem;
+    margin: 1rem auto;
 }
 .dailyBrief {
-    background: #f1f1f1;
+    background: #edf1f4;
     padding-bottom: 1rem;
+    border-radius: 10px;
     &__header {
-        background-image: url("../../assets/images/daily-brief-bg.jpg");
+        background-image: url("../../assets/images/daily-brief-bg.png");
         background-size: cover;
-        height: 400px;
+        height: 300px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
-
+        overflow: hidden;
         &__title {
             font-size: 40px;
             color: $white;
             line-height: 4rem;
+            font-family: Helvetica-Regular, Helvetica, sans-serif;
+
             @media screen and (max-width: 550px) {
-                font-size: 25px;
+                font-size: 30px;
             }
         }
         &__date {
-            font-size: 20px;
+            font-size: 18px;
             color: $white;
+            font-family: Inter-Regular, Helvetica, sans-serif;
         }
     }
 
     &__category {
         margin: 2rem 1rem;
+        &__title {
+            color: #25b0c1;
+            font-family: GT-FLEXA, Helvetica, sans-serif;
+            font-size: 20px;
+            font-weight: 500;
+        }
         &__item {
             @include card-container;
             &__header {
@@ -54,21 +65,81 @@
                 }
                 .flag {
                     @include flag-item;
+                    margin-right: 1rem;
                 }
             }
 
             &__body {
                 .title {
-                    font-size: 18px;
+                    font-size: 20px;
+                    font-family: Helvetica-Regular, Helvetica, sans-serif;
+                    line-height: 1.2rem;
                     @media screen and (max-width: 550px) {
                         font-size: 16px;
                     }
                 }
                 .text {
-                    font-size: 18px;
+                    font-size: 16px;
                     line-height: 1.5rem;
+                    color: #999999;
+
+                    font-family: Helvetica-Regular, Helvetica, sans-serif;
                     @media screen and (max-width: 550px) {
                         font-size: 16px;
+                    }
+                }
+
+                .wrap {
+                    display: grid;
+                    grid-template-columns: 1fr;
+                    margin: 0.5rem 0rem;
+                    @media screen and (min-width: 600px) {
+                        grid-template-columns: 1fr 1fr;
+                    }
+                    .riskLevel {
+                        min-height: 120px;
+                        background: #f1f1f1;
+                        border-radius: 10px;
+                        padding: 1.5rem;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        &__header {
+                            &__title {
+                            }
+                            &__subTitle {
+                                font-size: 20px;
+                                font-weight: 100;
+                                margin-top: 1rem;
+                            }
+                        }
+                        &__levels {
+                            display: flex;
+                            grid-gap: 0.2rem;
+                            gap: 0.2rem;
+                            &__item {
+                                position: relative;
+                                width: 0.7rem;
+                                height: 2rem;
+                                border-radius: 50px;
+                                background: #ccc;
+                            }
+                            [alert-type="1"] {
+                                background: $green;
+                            }
+                            [alert-type="2"] {
+                                background: $light-green;
+                            }
+                            [alert-type="3"] {
+                                background: $yellow;
+                            }
+                            [alert-type="4"] {
+                                background: $orange;
+                            }
+                            [alert-type="5"] {
+                                background: $dark-red;
+                            }
+                        }
                     }
                 }
 
