--- a/src/scss/templates/news-alert.scss
+++ b/src/scss/templates/news-alert.scss
@@ -3,75 +3,67 @@
 @import "../variables";
 @import "../mixins/flag-item.mixin";
 .main {
-    max-width: 700px;
+    max-width: 500px;
     margin: auto;
     padding: 0rem 1rem;
 
     .news-alerts {
         .country-card {
             display: flex;
-            background: #f1f1f1;
             border-radius: $round-corner;
+            margin: 1rem auto;
             .body {
-                width: 80%;
-                position: relative;
-                border-radius: 10px;
-                padding: 4rem 1.5rem;
-                .logo-icon {
-                    position: absolute;
-                    left: 15px;
-                    top: 15px;
-                    height: 25px;
-                }
-
                 .header {
-                    display: flex;
-                    align-items: center;
-                    .title {
-                        font-size: 16px;
-                        font-weight: normal;
-                        line-height: 3rem;
-                    }
-                    .flag-sm {
-                        display: none;
-                        @media screen and (max-width: 350px) {
+                    background: #f1f1f1;
+                    position: relative;
+                    border-radius: 10px;
+                    padding: 1rem 1.5rem;
+                    &__logos {
+                        display: flex;
+                        align-items: center;
+                        margin-bottom: 3rem;
+                        &__riskline {
                             @include flag-item;
-                            display: block;
+                        }
+                        &__country {
+                            margin-left: auto;
+                            @include flag-item;
                         }
                     }
-                }
-
-                .content {
-                    line-height: 1.5rem;
-                }
-                .advice-title {
-                    line-height: 1.5rem;
-                    margin-top: 1.5rem;
-                }
-                .sub-title {
-                    line-height: 1.8rem;
-                    font-weight: bold;
-                    font-size: 25px;
-                    margin-bottom: 2rem;
-                    margin-top: 1.5rem;
-                }
-            }
-
-            .flag {
-                display: none;
-            }
-            @media screen and (min-width: 351px) {
-                .flag {
-                    display: flex;
-                    align-items: center;
-                    width: 20%;
-                    img {
-                        max-width: 100%;
+                    &__sub {
+                        &__countryName {
+                            font-size: 16px;
+                            font-weight: 700;
+                            font-weight: normal;
+                            text-transform: uppercase;
+                        }
+                        &__alertTitle {
+                            line-height: 1em;
+                            font-weight: bold;
+                            font-size: 25px;
+                            margin-bottom: 1rem;
+                            margin-top: 1rem;
+                        }
                     }
                 }
             }
         }
 
+        .alert-content {
+            background: #edf1f4;
+            position: relative;
+            border-radius: 10px;
+            padding: 1rem 1.5rem;
+            .content {
+                line-height: 1.5rem;
+                font-family: Helvetica-semi-bold, Helvetica, sans-serif;
+            }
+            .advice-title {
+                line-height: 1.5rem;
+                margin-top: 1.5rem;
+                font-family: Helvetica-Regular, Helvetica, sans-serif;
+            }
+        }
         .wrap {
             display: grid;
             grid-template-columns: 1fr;
@@ -81,7 +73,7 @@
                 grid-template-columns: 1fr 1fr;
             }
             .riskLevel {
-                min-height: 150px;
+                min-height: 120px;
                 background: #f1f1f1;
                 border-radius: 10px;
                 padding: 1.5rem;
@@ -92,7 +84,7 @@
                     &__title {
                     }
                     &__subTitle {
-                        font-size: 25px;
+                        font-size: 20px;
                         font-weight: 100;
                         margin-top: 1rem;
                     }
@@ -100,9 +92,8 @@
 
                 &__levels {
                     display: flex;
-                    grid-gap: 0.4rem;
-                    gap: 0.4rem;
-
+                    grid-gap: 0.3rem;
+                    gap: 0.3rem;
                     &__item {
                         position: relative;
                         width: 0.8rem;
