--- a/src/css/templates/contact-thanks.css
+++ b/src/css/templates/contact-thanks.css
@@ -118,7 +118,8 @@ button:active {
   font-size: 25px;
   margin: 2rem 0rem;
   font-weight: 300;
-  font-family: Helvetica-Regular, Helvetica, sans-serif;
+  font-family: GT-FLEXA, Helvetica, sans-serif;
+  text-align: center;
 }
 .contact-thanks-wrap .help-wrap {
   display: flex;
