--- a/src/scss/templates/contact-thanks.scss
+++ b/src/scss/templates/contact-thanks.scss
@@ -30,7 +30,8 @@
             font-size: 25px;
             margin: 2rem 0rem;
             font-weight: 300;
-            font-family: Helvetica-Regular, Helvetica, sans-serif;
+            font-family: GT-FLEXA, Helvetica, sans-serif;
+            text-align: center;
         }
     }
     .help-wrap {
