--- a/src/scss/templates/news-alert.scss
+++ b/src/scss/templates/news-alert.scss
@@ -14,7 +14,7 @@
             margin: 1rem auto;
             .body {
                 .header {
-                    background: #f1f1f1;
+                    background: #f8f4f5;
                     position: relative;
                     border-radius: 10px;
                     padding: 1rem 1.5rem;
@@ -23,10 +23,11 @@
                         align-items: center;
                         margin-bottom: 3rem;
                         &__riskline {
+                            margin-left: auto;
+
                             @include flag-item;
                         }
                         &__country {
-                            margin-left: auto;
                             @include flag-item;
                         }
                     }
@@ -43,13 +44,34 @@
                             font-size: 25px;
                             margin-bottom: 1rem;
                             margin-top: 1rem;
+                            font-family: Helvetica-semi-bold, Helvetica, sans-serif;
                         }
                     }
                 }
             }
         }
+        .alert-content-1 {
+            position: relative;
+            border-radius: 10px;
+            padding: 1rem 1.5rem;
+            font-family: Helvetica-semi-bold, Helvetica, sans-serif;
 
-        .alert-content {
+            .text {
+                line-height: 1.2rem;
+                margin-bottom: 1.5rem;
+            }
+            &__dates {
+                margin-top: 1rem;
+                display: flex;
+                border-bottom: 1.5px solid #f1f1f1;
+                padding-bottom: 0.5rem;
+                h6 {
+                    flex: 1;
+                    font-weight: normal;
+                }
+            }
+        }
+        .alert-content-2 {
             background: #edf1f4;
             position: relative;
             border-radius: 10px;
@@ -60,7 +82,6 @@
             }
             .advice-title {
                 line-height: 1.5rem;
-                margin-top: 1.5rem;
                 font-family: Helvetica-Regular, Helvetica, sans-serif;
             }
         }
@@ -74,7 +95,7 @@
             }
             .riskLevel {
                 min-height: 120px;
-                background: #f1f1f1;
+                background: #f8f4f5;
                 border-radius: 10px;
                 padding: 1.5rem;
                 display: flex;
