--- a/src/scss/templates/welcome.scss
+++ b/src/scss/templates/welcome.scss
@@ -43,6 +43,7 @@
         line-height: 1.5rem;
         .title {
             margin-bottom: 1.5rem;
+            font-family: Helvetica-Regular, Helvetica, sans-serif;
         }
         .content {
             margin-bottom: 1rem;
