--- a/src/css/templates/daily-brief.css
+++ b/src/css/templates/daily-brief.css
@@ -142,7 +142,7 @@ button:active {
 .dailyBrief__header__title {
   font-size: 40px;
   color: #fff;
-  line-height: 4rem;
+  line-height: 6rem;
   font-family: "GT-FLEXA";
 }
 @media screen and (max-width: 550px) {
@@ -220,6 +220,10 @@ button:active {
   grid-template-columns: 1fr;
   margin: 0.5rem 0rem;
 }
+.dailyBrief__category__item__body .wrap .title {
+  font-size: 16px;
+  font-weight: 500;
+}
 @media screen and (min-width: 600px) {
   .dailyBrief__category__item__body .wrap {
     grid-template-columns: 1fr 1fr;
@@ -246,8 +250,8 @@ button:active {
 }
 .dailyBrief__category__item__body .wrap .riskLevel__levels__item {
   position: relative;
-  width: 1.2rem;
-  height: 1.2rem;
+  width: 0.8rem;
+  height: 0.8rem;
   border-radius: 50px;
   background: #ccc;
 }
