--- a/src/css/templates/welcome.css
+++ b/src/css/templates/welcome.css
@@ -136,6 +136,7 @@ button:active {
 }
 .welcome-wrap .email-content .title {
   margin-bottom: 1.5rem;
+  font-family: Helvetica-Regular, Helvetica, sans-serif;
 }
 .welcome-wrap .email-content .content {
   margin-bottom: 1rem;
