--- a/src/scss/templates/daily-brief.scss
+++ b/src/scss/templates/daily-brief.scss
@@ -31,7 +31,7 @@
         &__title {
             font-size: 40px;
             color: $white;
-            line-height: 4rem;
+            line-height: 6rem;
             font-family: "GT-FLEXA";
             @media screen and (max-width: 550px) {
                 font-size: 25px;
@@ -92,7 +92,10 @@
                     display: grid;
                     grid-template-columns: 1fr;
                     margin: 0.5rem 0rem;
-
+                    .title {
+                        font-size: 16px;
+                        font-weight: 500;
+                    }
                     @media screen and (min-width: 600px) {
                         grid-template-columns: 1fr 1fr;
                     }
@@ -117,8 +120,8 @@
                             gap: 0.2rem;
                             &__item {
                                 position: relative;
-                                width: 1.2rem;
-                                height: 1.2rem;
+                                width: 0.8rem;
+                                height: 0.8rem;
                                 border-radius: 50px;
                                 background: #ccc;
                                 @media screen and (max-width: 600px) {
